inserito script.js in idex.html

--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
         Qual'è la tua risposta?
     </h2>
     <p id="dati-utente"></p>
+
+    <script type="text/javascript" src="./js/script.js"></script>
 </body>
 </html>
